<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alignmentMode="alignBounds"
    android:columnCount="2"
    android:columnOrderPreserved="false"
    android:padding="10dp"
    android:useDefaultMargins="true" >

    <TextView
        android:id="@+id/label_0"
        android:layout_gravity="right"
        android:text="@string/seller_nick"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/edit_0"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/edit_text_holo_light"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_1"
        android:layout_gravity="right"
        android:text="@string/user_name"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/edit_1"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/edit_text_holo_light"
        android:inputType="text" />

    <TextView
        android:id="@+id/label_2"
        android:layout_gravity="right"
        android:text="@string/password"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/edit_2"
        android:layout_gravity="fill_horizontal"
        android:background="@drawable/edit_text_holo_light"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/check_0"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/memorize_password" />

        <CheckBox
            android:id="@+id/check_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/auto_login" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_columnSpan="2"
        android:background="@drawable/btn_default_holo_light"
        android:text="@string/login" />

</GridLayout>